--- a/about.html
+++ b/about.html
@@ -2,22 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/sut-meme/favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content=""><title>About</title><meta name="description" content="About this app" data-svelte="svelte-1ds1qyu">
-	<link href="/sut-meme/internal/immutable/assets/__layout-335f482e.css" rel="stylesheet">
-	<link href="/sut-meme/internal/immutable/assets/about-9682aba9.css" rel="stylesheet">
+	<link href="/internal/immutable/assets/__layout-def55954.css" rel="stylesheet">
+	<link href="/internal/immutable/assets/about-9682aba9.css" rel="stylesheet">
 	</head>
 	<body>
 		<div>
 
 
-<header class="svelte-t2wq17"><div class="corner svelte-t2wq17"><a href="https://kit.svelte.dev" class="svelte-t2wq17"><img src="/sut-meme/internal/immutable/assets/svelte-logo-87df40b8.svg" alt="SvelteKit" class="svelte-t2wq17"></a></div>
+<header class="svelte-t2wq17"><div class="corner svelte-t2wq17"><a href="https://kit.svelte.dev" class="svelte-t2wq17"><img src="/internal/immutable/assets/svelte-logo-87df40b8.svg" alt="SvelteKit" class="svelte-t2wq17"></a></div>
 
 	<nav class="svelte-t2wq17"><svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-t2wq17"><path d="M0,0 L1,2 C1.5,3 1.5,3 2,3 L2,0 Z" class="svelte-t2wq17"></path></svg>
-		<ul class="svelte-t2wq17"><li class="svelte-t2wq17"><a sveltekit:prefetch href="/sut-meme/" class="svelte-t2wq17">Home</a></li>
-			<li class="svelte-t2wq17"><a sveltekit:prefetch href="/sut-meme/about" class="svelte-t2wq17">About</a></li>
-			<li class="svelte-t2wq17"><a sveltekit:prefetch href="/sut-meme/todos" class="svelte-t2wq17">Todos</a></li></ul>
+		<ul class="svelte-t2wq17"><li class="svelte-t2wq17"><a sveltekit:prefetch href="/" class="svelte-t2wq17">Home</a></li>
+			<li class="svelte-t2wq17 active"><a sveltekit:prefetch href="/about" class="svelte-t2wq17">About</a></li>
+			<li class="svelte-t2wq17"><a sveltekit:prefetch href="/todos" class="svelte-t2wq17">Todos</a></li></ul>
 		<svg viewBox="0 0 2 3" aria-hidden="true" class="svelte-t2wq17"><path d="M0,0 L0,3 C0.5,3 0.5,3 1,2 L2,0 Z" class="svelte-t2wq17"></path></svg></nav>
 
 	<div class="corner svelte-t2wq17"></div>
@@ -38,7 +38,7 @@
 		the devtools network panel and reloading.
 	</p>
 
-	<p>The <a href="/sut-meme/todos">TODOs</a> page illustrates SvelteKit&#39;s data loading and form handling. Try using
+	<p>The <a href="/todos">TODOs</a> page illustrates SvelteKit&#39;s data loading and form handling. Try using
 		it with JavaScript disabled!
 	</p>
 </div></main>
