--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.jpeg" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
